RESOLVED FIXED211416
Fix the mistake on macro HAVE_SYSTEM_FEATURE_FLAGS
https://bugs.webkit.org/show_bug.cgi?id=211416
Summary Fix the mistake on macro HAVE_SYSTEM_FEATURE_FLAGS
Peng Liu
Reported 2020-05-04 17:28:43 PDT
Fix the mistake on macro HAVE_SYSTEM_FEATURE_FLAGS
Attachments
Patch (7.12 KB, patch)
2020-05-04 17:37 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-05-04 17:37:50 PDT
EWS
Comment 2 2020-05-04 18:43:33 PDT
Committed r261137: <https://trac.webkit.org/changeset/261137> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398445 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-04 18:44:16 PDT
Note You need to log in before you can comment on or make changes to this bug.