Fix the mistake on macro HAVE_SYSTEM_FEATURE_FLAGS https://bugs.webkit.org/show_bug.cgi?id=211416

Reviewed by Tim Horton.

We should use "#if HAVE(SYSTEM_FEATURE_FLAGS)" instead of "#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)".
Source/WebCore/PAL:

* pal/spi/cocoa/FeatureFlagsSPI.h:

Source/WebKit:

And we have to use the function _os_feature_enabled_impl() instead of the macro os_feature_enabled()
because WebKit is a namespace and cannot be used in os_feature_enabled().

* Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultAsyncFrameAndOverflowScrollingEnabled):
(WebKit::defaultUseGPUProcessForMedia):
(WebKit::defaultRenderCanvasInGPUProcessEnabled):
(WebKit::defaultCaptureAudioInGPUProcessEnabled):
(WebKit::defaultCaptureVideoInGPUProcessEnabled):
(WebKit::defaultWebRTCCodecsInGPUProcess):
(WebKit::defaultWebGL2Enabled):
(WebKit::defaultWebGPUEnabled):
(WebKit::defaultInAppBrowserPrivacy):
(WebKit::defaultIncrementalPDFEnabled):
(WebKit::defaultWebXREnabled):


Canonical link: https://commits.webkit.org/224310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261137 268f45cc-cd09-0410-ab3c-d52691b4dbfc