Source/WebKit/Shared/WebPreferencesDefaultValues.cpp
@@ -84,8 +84,8 @@ static bool defaultAsyncFrameAndOverflowScrollingEnabled()
     return true;
 #endif
 
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, async_frame_and_overflow_scrolling);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "async_frame_and_overflow_scrolling");
 #endif
 
 #if PLATFORM(MAC)
@@ -113,8 +113,8 @@ bool defaultAsyncOverflowScrollingEnabled()
 
 bool defaultUseGPUProcessForMedia()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, canvas_and_media_in_gpu_process);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "canvas_and_media_in_gpu_process");
 #endif
 
     return false;
@@ -124,8 +124,8 @@ bool defaultUseGPUProcessForMedia()
 
 bool defaultRenderCanvasInGPUProcessEnabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, canvas_and_media_in_gpu_process);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "canvas_and_media_in_gpu_process");
 #endif
 
     return false;
@@ -135,12 +135,12 @@ bool defaultRenderCanvasInGPUProcessEnabled()
 
 bool defaultCaptureAudioInGPUProcessEnabled()
 {
-#if PLATFORM(MAC) && HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, webrtc_in_gpu_process);
+#if PLATFORM(MAC) && HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "webrtc_in_gpu_process");
 #endif
 
-#if PLATFORM(IOS_FAMILY) && HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, canvas_and_media_in_gpu_process);
+#if PLATFORM(IOS_FAMILY) && HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "canvas_and_media_in_gpu_process");
 #endif
 
     return false;
@@ -161,8 +161,8 @@ bool defaultCaptureAudioInUIProcessEnabled()
 
 bool defaultCaptureVideoInGPUProcessEnabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, webrtc_in_gpu_process);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "webrtc_in_gpu_process");
 #endif
 
     return false;
@@ -174,8 +174,8 @@ bool defaultCaptureVideoInGPUProcessEnabled()
 
 bool defaultWebRTCCodecsInGPUProcess()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, webrtc_in_gpu_process);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "webrtc_in_gpu_process");
 #endif
 
     return false;
@@ -187,8 +187,8 @@ bool defaultWebRTCCodecsInGPUProcess()
 
 bool defaultWebGL2Enabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, WebGL2);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "WebGL2");
 #endif
 
     return false;
@@ -200,8 +200,8 @@ bool defaultWebGL2Enabled()
 
 bool defaultWebGPUEnabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, WebGPU);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "WebGPU");
 #endif
 
     return false;
@@ -211,8 +211,8 @@ bool defaultWebGPUEnabled()
 
 bool defaultInAppBrowserPrivacy()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, InAppBrowserPrivacy);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "InAppBrowserPrivacy");
 #endif
 
     return false;
@@ -221,8 +221,8 @@ bool defaultInAppBrowserPrivacy()
 #if HAVE(INCREMENTAL_PDF_APIS)
 bool defaultIncrementalPDFEnabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, incremental_pdf);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "incremental_pdf");
 #endif
 
     return false;
@@ -233,14 +233,13 @@ bool defaultIncrementalPDFEnabled()
 
 bool defaultWebXREnabled()
 {
-#if HAVE(HAVE_SYSTEM_FEATURE_FLAGS)
-    return os_feature_enabled(WebKit, WebXR);
+#if HAVE(SYSTEM_FEATURE_FLAGS)
+    return _os_feature_enabled_impl("WebKit", "WebXR");
 #endif
 
     return false;
 }
 
 #endif // ENABLE(WEBXR)
-
 
 } // namespace WebKit
